# rlob

./: Cargo.toml  MPT_PROOF_ACCEPTANCE_REPORT.md  ORDERBOOK_VERIFICATION_REPORT.md  US-001-2-MPT-README.md  US-001-2-README.md  US-001-README.md  US-012-01-ACCEPTANCE.md  US-012-01-README.md  US-012-ACCEPTANCE.md  US-012-README.md
.claude/: settings.local.json
.claude/commands/: ask.md  exp.md
.claude/story/: prd.md  user_story_example.yaml
src/app/: Cargo.toml
src/app/examples/: ArrayQueue.rs  SegQueue.rs  arc.rs  array_queue.rs  bumpalo.rs  c2.rs  client.rs  epoll.rs  epoll2.rs  io_uring.rs  macro2.rs  object_pool.rs  rayon.rs  readme.md  receiver.rs  s2.rs  sender.rs  server.rs  spring.rs  tcp_echo_example.rs  tcp_reconnect_demo.rs  test.rs  test2.rs  test3.rs  tokio.rs
src/app/src/: main.rs
src/lib/: Cargo.toml
src/lib/examples/: orderbook_demo.rs
src/lib/src/: domain.rs  exchange.rs  lib.rs  multicase.rs  outbound.rs
src/lib/src/domain/: address.rs  order.rs
src/lib/src/exchange/domain/: mod.rs
src/lib/src/exchange/outbound/: repo.rs
src/lib/src/message/domain/: message.rs
src/lib/src/message/outbound/: message_repo.rs  mod.rs
src/lib/src/mpt/: hash.rs  mod.rs  nibbles.rs  node.rs  proof.rs  trie.rs
src/lib/src/multicase/domain/: multicast.rs
src/lib/src/multicase/outbound/: mod.rs  udp_publisher.rs  udp_subscriber.rs
src/lib/src/multicast_v4/domain/: mod.rs
src/lib/src/orderbook/: arena.rs  mod.rs
src/lib/src/outbound/: repo.rs  udp_publisher.rs  udp_subscriber.rs
src/lib/src/unicase/domain/: mod.rs  unicase.rs
src/lib/src/unicase/outbound/: tcp_client.rs  tcp_server.rs
src/macro_lib/: Cargo.toml
src/macro_lib/src/: lib.rs
src/web3/: Cargo.toml  README.md
src/web3/src/: main.rs
src/web3/src/domain/: mod.rs
src/web3/src/domain/entities/: mod.rs  orderbook.rs  price.rs  symbol.rs  ticker.rs
src/web3/src/domain/gateways/: market_data.rs  mod.rs
src/web3/src/infrastructure/exchanges/: mod.rs
src/web3/src/infrastructure/exchanges/binance/: market_data.rs  mod.rs  types.rs
src/web3/src/infrastructure/exchanges/bitget/: market_data.rs  mod.rs  types.rs
src/web3/tests/: orderbook_test.rs
