[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
lib = { path = "../lib" }
libc = "0.2"
tokio = { version = "1.48.0", features = ["full"] }
crossbeam = "0.8.4"
crossbeam-queue = "0.3.12"
rayon = "1.11.0"
nix = { version = "0.30.1", features = ["event"] }
mio = "1.1.0"
dashmap = "5.5"
