[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
lib = { path = "../lib" }
macro_lib = { path = "../macro_lib" }
libc = "0.2"
tokio = { version = "1.48.0", features = ["full"] }
crossbeam = "0.8.4"
crossbeam-queue = "0.3.12"
rayon = "1.11.0"
mio = "1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
spring-sqlx = "0.4.1"
spring-web = "0.4.12"
spring = "0.4.6"
anyhow = "1.0.100"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7.11"



