[package]
name = "lib"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
url = "2"
futures-util = "0.3"
thiserror = "2"
parking_lot = "0.12"
#quote = "1.0.41"
#syn = "2.0.108"
#proc-macro2 = "1.0"  # 提供与编译器无关的过程宏 API
