[package]
name = "web3"
version = "0.1.0"
edition = "2021"

[lib]
name = "web3"
path = "src/lib.rs"

[[bin]]
name = "web3"
path = "src/main.rs"

[[bin]]
name = "dual_exchange"
path = "src/bin/dual_exchange.rs"

[[bin]]
name = "test_orderbook"
path = "src/bin/test_orderbook.rs"

[[bin]]
name = "test_bitget_orderbook"
path = "src/bin/test_bitget_orderbook.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
# WebSocket client
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
# HTTP client
reqwest = { version = "0.12", features = ["json"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Error handling
thiserror = "2"
# Async trait support
async-trait = "0.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
